# idris2-quickdocs

./: .gitignore  MANIFEST.in  README.md  build_nix.sh  build_quickdocs_nix.sh  flake.nix  index.html  main.py  mkhome.py  pack-mkquickdocs.sh  pyproject.toml  rebuild_all.sh
.github/workflows/: publish.yml
data/: home.html  index.json
data/base/docs/: Control.App.Console.html  Control.App.FileIO.html  Control.App.html  Control.Applicative.Const.html  Control.Function.FunExt.html  Control.Function.html  Control.Monad.Either.html  Control.Monad.Error.Either.html  Control.Monad.Error.Interface.html  Control.Monad.Identity.html  Control.Monad.Maybe.html  Control.Monad.RWS.CPS.html  Control.Monad.RWS.Interface.html  Control.Monad.RWS.html  Control.Monad.Reader.Interface.html  Control.Monad.Reader.Reader.html  Control.Monad.Reader.html  Control.Monad.ST.html  Control.Monad.State.Interface.html  Control.Monad.State.State.html  Control.Monad.State.html  Control.Monad.Trans.html  Control.Monad.Writer.CPS.html  Control.Monad.Writer.Interface.html  Control.Monad.Writer.html  Control.Ord.html  Control.Order.html  Control.Relation.html  Control.WellFounded.html  Data.Bifoldable.html  Data.Bits.html  Data.Bool.Xor.html  Data.Bool.html  Data.Buffer.html  Data.Colist.html  Data.Colist1.html  Data.Contravariant.html  Data.DPair.html  Data.Either.html  Data.Fin.Order.html  (+76 more)
data/contrib/docs/: Control.ANSI.CSI.html  Control.ANSI.SGR.html  Control.ANSI.html  Control.Algebra.Implementations.html  (+113 more)
src/idris2_quickdocs/: copystatic.py  mkhome.py  mkindex.py
templates/: home.md.j2
(+21 files in other folders)
