[tool.poetry]
name = "idris2-quickdocs"
version = "0.1.0"
description = ""
authors = ["Johann Rudloff <johann@sinyax.net>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.9"
markdown = "^3.10"
jinja2 = "^3.1.6"
markupsafe = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
