
[project]
name = "idris2-quickdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "markupsafe>=3.0.3",
]

[project.scripts]
quickdocs-mkhome     = "idris2_quickdocs.mkhome:main"
quickdocs-mkindex    = "idris2_quickdocs.mkindex:main"
quickdocs-copystatic = "idris2_quickdocs.copystatic:main"

[tool.setuptools.packages.find]
where = ["src"]
